--- a/src/princetonPlainsboro/MainWindow.form
+++ b/src/princetonPlainsboro/MainWindow.form
@@ -74,7 +74,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" alignment="0" pref="1053" max="32767" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -150,7 +150,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="patientListScroll" max="32767" attributes="0"/>
+                                      <Component id="patientListScroll" pref="0" max="32767" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -190,16 +190,10 @@
 
                       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                       <SubComponents>
-                        <Component class="javax.swing.JList" name="jList1">
+                        <Component class="javax.swing.JList" name="patientLst">
                           <Properties>
-                            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                              <StringArray count="5">
-                                <StringItem index="0" value="Item 1"/>
-                                <StringItem index="1" value="Item 2"/>
-                                <StringItem index="2" value="Item 3"/>
-                                <StringItem index="3" value="Item 4"/>
-                                <StringItem index="4" value="Item 5"/>
-                              </StringArray>
+                            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                              <Connection code="new javax.swing.AbstractListModel&lt;String&gt;() {&#xa;    String[] strings = { };&#xa;    public int getSize() { return strings.length; }&#xa;    public String getElementAt(int i) { return strings[i]; }&#xa;}" type="code"/>
                             </Property>
                           </Properties>
                           <AuxValues>
@@ -326,21 +320,21 @@
                                                   <Group type="102" attributes="0">
                                                       <Component id="nameLbl" min="-2" pref="54" max="-2" attributes="0"/>
                                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                      <Component id="nameTxtF" min="-2" pref="230" max="-2" attributes="0"/>
+                                                      <Component id="patientNameTxtF" min="-2" pref="230" max="-2" attributes="0"/>
                                                   </Group>
                                                   <Group type="102" attributes="0">
                                                       <Component id="surnameLbl" min="-2" pref="54" max="-2" attributes="0"/>
                                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                      <Component id="surnameTxtF" max="32767" attributes="0"/>
+                                                      <Component id="patientSurnameTxtF" max="32767" attributes="0"/>
                                                   </Group>
                                                   <Group type="102" attributes="0">
                                                       <Component id="adressLbl" min="-2" pref="54" max="-2" attributes="0"/>
                                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                      <Component id="adressTxtF" max="32767" attributes="0"/>
+                                                      <Component id="patientAdressTxtF" max="32767" attributes="0"/>
                                                   </Group>
                                               </Group>
                                               <Group type="102" attributes="0">
-                                                  <Component id="inseeLbl" min="-2" pref="68" max="-2" attributes="0"/>
+                                                  <Component id="patientInseeLbl" min="-2" pref="68" max="-2" attributes="0"/>
                                                   <EmptySpace max="-2" attributes="0"/>
                                                   <Component id="inseeTxtF" min="-2" pref="312" max="-2" attributes="0"/>
                                               </Group>
@@ -364,21 +358,21 @@
                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="nameLbl" min="-2" max="-2" attributes="0"/>
-                                      <Component id="nameTxtF" min="-2" max="-2" attributes="0"/>
+                                      <Component id="patientNameTxtF" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="surnameLbl" min="-2" max="-2" attributes="0"/>
-                                      <Component id="surnameTxtF" min="-2" max="-2" attributes="0"/>
+                                      <Component id="patientSurnameTxtF" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="adressLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="adressTxtF" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="patientAdressTxtF" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="inseeLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="patientInseeLbl" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="inseeTxtF" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -406,25 +400,25 @@
                             <Property name="text" type="java.lang.String" value="Adresse :"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="nameTxtF">
+                        <Component class="javax.swing.JTextField" name="patientNameTxtF">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="jTextField1"/>
                           </Properties>
                           <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nameTxtFActionPerformed"/>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="patientNameTxtFActionPerformed"/>
                           </Events>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="surnameTxtF">
+                        <Component class="javax.swing.JTextField" name="patientSurnameTxtF">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="jTextField1"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="adressTxtF">
+                        <Component class="javax.swing.JTextField" name="patientAdressTxtF">
                           <Properties>
                             <Property name="text" type="java.lang.String" value=" ....."/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JLabel" name="inseeLbl">
+                        <Component class="javax.swing.JLabel" name="patientInseeLbl">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="INSEE :"/>
                           </Properties>
